@@ -1,3 +1,8 @@
+2006-09-25  Albert Chu  <chu11@llnl.gov>
+
+	* configure.ac, src/cerebrod/, src/cerebro-stat: Use sizeof checks
+	to remove cross-platform compiler warnings.
+	
 2006-09-22  Albert Chu  <chu11@llnl.gov>
 
 	* src/cerebrod/cerebrod_speaker_data.c (_metric_is_updated): Fix
